The Sticker Shop

--- a/Hacking
+++ b/Hacking
@@ -1,1 +1,2 @@
 CyberLens(TryHackMe) : https://medium.com/@rahaliashraf732/cyberlens-tryhackme-writeup-d184903e497e
+TheStickerShop(TryHackMe) : https://medium.com/@rahaliashraf732/the-sticker-shop-046f5b9bec95
