--- a/Hacking
+++ b/Hacking
@@ -1,2 +1,3 @@
 CyberLens(TryHackMe) : https://medium.com/@rahaliashraf732/cyberlens-tryhackme-writeup-d184903e497e
 TheStickerShop(TryHackMe) : https://medium.com/@rahaliashraf732/the-sticker-shop-046f5b9bec95
+Lofi(TryHackMe) : https://medium.com/@rahaliashraf732/tryhackme-lofi-room-writeup-exploiting-lfi-vulnerability-ca349aec9d17
